# website

./: .gitattributes  .gitignore  .htaccess  CNAME  Caddyfile  LICENSE  LICENSE.md  README.md  _config.yml  date.hs  debug.php  exodrifter.sublime-project  exodrifter.sublime-workspace  flake.nix  godot-serialization.md  godot-serialize-arbitrary-code-execution.md  inbox.md  index.html  no-signal.html  pyrite.php  render.php  site.cabal  site.hs  streamscharts.csv  styles.css
.obsidian/: app.json
2014-03-25 2155/: .htaccess  index.php
_data/: navigation.yml
_layouts/: category-listing.html  tag-list.html  year-listing.html
_pages/: category-archive.md  tag-archive.md  year-archive.md
_posts/: 2019-04-12-23-09-45.md  2019-04-19-23-01-14.md  2019-04-26-23-32-14.md  2019-05-10-18-06-37-0500.md  2019-05-10-23-06-37.md  2019-05-17-22-59-05.md  2019-05-24-23-44-10.md  2019-05-31-18-01-30-0500.md  2019-05-31-23-01-30.md  2019-06-07-23-00-21.md  2019-06-14-17-59-51-0500.md  2019-06-14-22-59-51.md  2019-06-23-01-51-33.md  2019-06-28-18-02-16-0500.md  2019-06-28-23-02-16.md  2019-07-05-23-04-14.md  2019-07-12-18-54-24-0500.md  2019-07-12-23-54-24.md  2019-07-26-23-03-21.md  2019-08-02-23-04-29.md  2019-08-19-23-22-45.md  2019-08-26-18-52-07-0500.md  2019-08-26-23-52-07.md  2019-09-11-19-30-35-0500.md  2019-09-12-00-30-35.md  2019-09-19-00-06-36.md  2019-09-21-19-17-28.md  2019-09-27-23-05-11.md  2019-09-30-18-22-15-0500.md  2019-09-30-23-22-15.md  2019-10-05-10-03-00-0500.md  2019-10-05-15-03-00+0000.md  2019-10-07-23-04-38.md  2019-10-14-17-56-19-0500.md  2019-10-14-22-56-19.md  2019-10-21-23-47-06.md  2019-10-28-17-58-31-0500.md  2019-10-28-22-58-31.md  2019-11-05-00-18-24.md  2019-11-10-18-58-14-0600.md  (+445 more)
baskiv/: dictionary.db  dictionary.php  util.php
blog/: 20240415_notes-about-staple.md  20240716_delta-h-con-is-a-mess.md  20240806_godot-viewport-texture-workaround.md  20240813_self-hosting-is-exciting.md  delta-h-con-is-a-mess.md  notes-about-staple.md
content/: 20240707.md  README.md  about.md  contact.md  gender-dysphoria.html  inbox.md  index.md  resume.md  style.css  support.md  template.html
data/: 2019-04-12-18-09-45-0500.json  2019-04-19-18-01-14-0500.json  2019-04-19-23-01-14.json  2019-04-26-18-32-14-0500.json  2019-04-26-23-32-14.json  2019-05-10-18-06-37-0500.json  2019-05-17-17-59-05-0500.json  2019-05-24-18-44-10-0500.json  2019-05-31-18-01-30-0500.json  2019-06-07-18-00-21-0500.json  2019-06-14-17-59-51-0500.json  2019-06-22-20-51-33-0500.json  2019-06-28-18-02-16-0500.json  2019-07-05-18-04-14-0500.json  2019-07-12-18-54-24-0500.json  2019-07-12-23-54-24.json  2019-07-26-18-03-21-0500.json  2019-08-02-18-04-29-0500.json  2019-08-19-18-22-45-0500.json  2019-08-26-18-52-07-0500.json  2019-09-11-19-30-35-0500.json  2019-09-18-19-06-36-0500.json  2019-09-21-14-17-28-0500.json  2019-09-27-18-05-11-0500.json  2019-09-30-18-22-15-0500.json  2019-10-05-10-03-00-0500.json  2019-10-05-15-03-00+0000.json  2019-10-07-18-04-38-0500.json  2019-10-14-17-56-19-0500.json  2019-10-14-22-56-19.json  2019-10-21-18-47-06-0500.json  2019-10-28-17-58-31-0500.json  2019-11-04-18-18-24-0600.json  2019-11-10-18-58-14-0600.json  2019-11-11-18-38-33-0600.json  2019-11-18-18-55-21-0600.json  2019-11-20-21-33-50-0600.json  2019-11-21-03-33-50.json  2019-11-25-18-59-01-0600.json  2019-12-02-18-15-48-0600.json  (+314 more)
db/: games.sqlite  posts.sqlite
entries/: 20221123_1725.md  20221126_1732.md  20230516_0150.md  20230517_0041.md  20230517_0051.md  20230517_0056.md  20230517_0121.md  20230517_0218.md  20230528_0429.md  20230528_1734.md  20230528_1748.md  20230528_1753.md  20230529_0556.md  20230529_0605.md  20230529_0611.md  20230529_0628.md  (+113 more)
(+5377 files in other folders)
