cabal-version: 3.4
name: site
version: 0.1.0.0

synopsis: exodrifter's website
homepage: exodrifter.space
license: NONE
license-file: LICENSE.md
author: exodrifter
maintainer: code@exodrifter.space
category: Web
build-type: Simple

executable site
  default-language: Haskell2010
  ghc-options:
    -Wall
    -Wcompat
    -threaded
    -rtsopts
    -with-rtsopts=-N

  default-extensions:
    BlockArguments,
    DerivingStrategies,
    GeneralizedNewtypeDeriving,
    NamedFieldPuns,
    OverloadedStrings,
    RecordWildCards,

  main-is: Main.hs
  hs-source-dirs: src
  other-modules:
    Exo.Build
    Exo.Build.Action
    Exo.Build.Const
    Exo.Build.Oracle
    Exo.Build.Shake
    Exo.Pandoc
    Exo.Pandoc.Link
    Exo.Pandoc.Meta
    Exo.Pandoc.Time
    Exo.Parser
    Exo.Parser.Frontmatter
    Exo.Vods
    Exo.Vods.Migration
    Exo.Vods.Vimeo
    Exo.RSS
    Exo.Scotty

  build-depends:
      base >= 4.11
    , relude ^>= 1.2.1.0

    , aeson
    , attoparsec
    , binary
    , bytestring
    , containers
    , directory
    , doctemplates
    , exceptions
    , extra
    , feed
    , filepath
    , http-client
    , http-client-tls
    , JuicyPixels
    , mime-types
    , network-uri
    , non-empty-text
    , pandoc
    , pandoc-types
    , req
    , scotty
    , shake
    , text
    , time
    , timespan
    , turtle
    , wai
    , yaml

  mixins:
    base hiding (Prelude),
    relude (Relude as Prelude),
    relude,

